grow/shrink and circle function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container" class="container">
         <div id="circle" class="circle"></div>
 
-        <p class="text">Breathe in/out</p>
+        <p id="text"></p>
 
         <div class="dot-container">
             <div class="dot"></div>
