--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./circle.css">
-    <script src="./script.js" defer></script>
+    <script src="circle.js" type="module" defer></script>
     <title>Meditation App</title>
 </head>
 
 <body>
-    <h1>Stay Relaxed</h1>
+    <h1>Inner Peace</h1>
 
     <div id="container" class="container">
         <div id="circle" class="circle"></div>
