music player created

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./circle.css">
+    <link rel="stylesheet" href="./player.css">
     <script src="circle.js" type="module" defer></script>
+    <script src="player.js" type="module" defer></script>
+
     <title>Meditation App</title>
 </head>
 
@@ -26,16 +29,22 @@
         <div class="circle-gradient"></div>
     </div>
 
-    <figure>
-        <figcaption>Play</figcaption>
-        <audio
-            controls
-            src="/media/cc0-audio/t-rex-roar.mp3">
-                Your browser does not support the
-                <code>audio</code> element.
-        </audio>
-    </figure>
     
+    <div class="music-container" id="music-container">
+        <audio src="music/ukulele.mp3" id="audio"></audio>
+            <div class="navigation">
+              <button id="prev" class="action-btn">
+                <i class="fas fa-backward"></i>
+              </button>
+              <button id="play" class="action-btn action-btn-big">
+                <i class="fas fa-play"></i>
+              </button>
+              <button id="next" class="action-btn">
+                <i class="fas fa-forward"></i>
+              </button>
+            </div>
+        </div>
+
 </body>
 
 </html>
