music player design completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./circle.css">
     <link rel="stylesheet" href="./player.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" 
+    crossorigin="anonymous" />
     <script src="circle.js" type="module" defer></script>
     <script src="player.js" type="module" defer></script>
 
@@ -17,6 +20,7 @@
 <body>
     <h1>Inner Peace</h1>
 
+    <!-- cicrle -->
     <div id="container" class="container">
         <div id="circle" class="circle"></div>
 
@@ -29,9 +33,9 @@
         <div class="circle-gradient"></div>
     </div>
 
-    
+    <!-- player -->
     <div class="music-container" id="music-container">
-        <audio src="music/ukulele.mp3" id="audio"></audio>
+        <audio src="mp3/relaxing.mp3" id="audio"></audio>
             <div class="navigation">
               <button id="prev" class="action-btn">
                 <i class="fas fa-backward"></i>
