created welcome.js, hidden elements when entering page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     crossorigin="anonymous" />
     <script src="circle.js" type="module" defer></script>
     <script src="player.js" type="module" defer></script>
+    <script src="welcome.js" defer></script>
 
     <title>Meditation App</title>
 </head>
@@ -24,9 +25,10 @@
     <div id="container" class="container">
         <div id="circle" class="circle"></div>
 
-        <p id="text"></p>
+        <p id="text" class="text"></p>
+        <h2 id="welcome-text" class="welcome-text">START</h2>
 
-        <div class="dot-container">
+        <div id="dot-container" class="dot-container">
             <div class="dot"></div>
         </div>
         
