welcome-page class changed to start

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="circle" class="circle"></div>
 
         <p id="text" class="text"></p>
-        <h2 id="welcome-text" class="welcome-text">START</h2>
+        <h2 id="start" class="start">START</h2>
 
         <div id="dot-container" class="dot-container">
             <div class="dot"></div>
