--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- player -->
-    <div class="music-container" id="music-container">
+    <div id="music-container" class="music-container" >
         <audio src="mp3/relaxing.mp3" id="audio"></audio>
             <div class="navigation">
               <button id="prev" class="action-btn">
