--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./circle.css">
-    <link rel="stylesheet" href="./player.css">
+    <link rel="stylesheet" href="./circle/circle.css">
+    <link rel="stylesheet" href="./player/player.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" 
     crossorigin="anonymous" />
-    <script src="circle.js" type="module" defer></script>
-    <script src="player.js" type="module" defer></script>
+    <script src="circle/circle.js" defer></script>
+    <script src="player/player.js" defer></script>
     <script src="welcome.js" defer></script>
 
     <title>Meditation App</title>
