--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" 
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" 
     crossorigin="anonymous" />
-    <script src="circle/circle.js" defer></script>
-    <script src="player/player.js" defer></script>
-    <script src="welcome.js" defer></script>
+    <script src="circle/circle.js" type="module" defer></script>
+    <script src="player/player.js"  type="module" defer></script>
+    <script src="events.js" defer></script>
 
     <title>Meditation App</title>
 </head>
@@ -37,7 +37,7 @@
 
     <!-- player -->
     <div id="music-container" class="music-container" >
-        <audio src="mp3/relaxing.mp3" id="audio"></audio>
+        <audio src="mp3/sound.mp3" id="audio"></audio>
             <div class="navigation">
               <button id="prev" class="action-btn">
                 <i class="fas fa-backward"></i>
