rewrited function showPlayer, handled in CSS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Meditation App</title>
 </head>
 
-<body>
+<body class='play pause'>
     <h1>Inner Peace</h1>
 
     <!-- cicrle -->
@@ -26,7 +26,7 @@
         <div id="circle" class="circle"></div>
 
         <p id="text" class="text"></p>
-        <h2 id="start" class="start">START</h2>
+        <h2 id="text-start" class="text-start">START</h2>
 
         <div id="dot-container" class="dot-container animation-control">
             <div class="dot"></div>
