prev nex bugfix

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <div id="music-container" class="music-container" >
         <audio src="mp3/sound.mp3" id="audio"></audio>
             <div class="navigation">
-              <button id="prev" class="action-btn">
+              <button disabled id="prev" class="action-btn">
                 <i class="fas fa-backward"></i>
               </button>
               <button id="play" class="action-btn action-btn-big">
                 <i class="fas fa-play"></i>
               </button>
-              <button id="next" class="action-btn">
+              <button disabled id="next" class="action-btn">
                 <i class="fas fa-forward"></i>
               </button>
             </div>
