--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+  <div class="nightsky"></div>
+  <img class="mountains" src="./img/deletedback.png" alt="">
     <h1>Inner Peace</h1>
 
     <!-- cicrle -->
